--- a/src/protocol/develop/actions/C3 - Contract Amendment.yaml
+++ b/src/protocol/develop/actions/C3 - Contract Amendment.yaml
@@ -6,8 +6,8 @@ code: C3
 
 metadata:
   name: ContractAmendment
-  label: Contract Amendment Action
-  description: "Contract Amendment Action - the issuer can initiate an amendment to the contract establishment metadata. The ability to make an amendment to the contract is restricted by the Authorization Flag set on the current revision of Contract Formation action."
+  label: Contract Amendment
+  description: "The issuer can initiate an amendment to the contract establishment metadata. The ability to make an amendment to the contract is restricted by the Authorization Flag set on the current revision of Contract Formation action."
   validation: AssetCreation
   rejection: Rejection
 
@@ -28,12 +28,6 @@ rules:
       comments:
 
 fields:
-  - name: Header
-    label: Header
-    description: "Common header data for all actions"
-    type: Header
-    notes: "Common header data for all actions. Can be changed by Issuer or Operator at their discretion."
-
   - name: ChangeIssuerAddress
     label: Change Issuer Address
     description: "Used to change the issuer address.  The new issuer address must be in the input[1] position."
