--- a/src/protocol/develop/actions/C4 - Static Contract Formation.yaml
+++ b/src/protocol/develop/actions/C4 - Static Contract Formation.yaml
@@ -6,7 +6,7 @@ code: C4
 
 metadata:
   name: StaticContract Formation
-  label: Static Contract Formation Action
+  label: Static Contract Formation
   description: "Static Contract Formation Action"
 
 rules:
@@ -17,12 +17,6 @@ rules:
       comments:
 
 fields:
-  - name: Header
-    label: Header
-    description: "Common header data for all actions"
-    type: Header
-    notes: "Common header data for all actions. Can be changed by Issuer or Operator at their discretion."
-
   - name: ContractName
     label: Contract Name
     description: "Length 0-255 bytes. Can be any unique identifying string, including human readable names for branding/vanity purposes.   [Contract identifier (instance) is the bitcoin public address. If the Public Address is lost, then the issuer will have to reissue the entire contract, Asset definition and tokens with the new public address.]. Smart contracts can be branded and specialized to suit any terms and conditions."
