--- a/src/protocol/develop/actions/G3 - Ballot Cast.yaml
+++ b/src/protocol/develop/actions/G3 - Ballot Cast.yaml
@@ -6,8 +6,8 @@ code: G3
 
 metadata:
   name: BallotCast
-  label: Ballot Cast Action
-  description: "Ballot Cast Action - Used by Token Owners to cast their ballot (vote) on proposals. 1 Vote per token unless a vote multiplier is specified in the relevant Asset Definition action."
+  label: Ballot Cast
+  description: "Used by Token Owners to cast their ballot (vote) on proposals. 1 Vote per token unless a vote multiplier is specified in the relevant Asset Definition action."
   validation: BallotCounted
   rejection: Rejection
 
@@ -24,12 +24,6 @@ rules:
       comments: Fund ballot cast response.
 
 fields:
-  - name: Header
-    label: Header
-    description: "Common header data for all actions"
-    type: Header
-    notes: "Common header data for all actions."
-
   - name: VoteTxId
     label: Vote Tx ID
     description: "Tx ID of the Vote the Ballot Cast is being made for."
