--- a/src/protocol/develop/actions/T2 - Settlement.yaml
+++ b/src/protocol/develop/actions/T2 - Settlement.yaml
@@ -6,8 +6,8 @@ code: T2
 
 metadata:
   name: Settlement
-  label: Settlement Action
-  description: "Settlement Action -  Settles the transfer request of bitcoins and tokens from transfer (T1) actions."
+  label: Settlement
+  description: "Settles the transfer request of bitcoins and tokens from transfer (T1) actions."
   validation: AssetCreation
   rejection: Rejection
 
@@ -24,12 +24,6 @@ rules:
       comments: Address X that is being settled for Asset 1.
 
 fields:
-  - name: Header
-    label: Header
-    description: "Common header data for all actions"
-    type: Header
-    notes: "Common header data for all actions. Can be changed by Issuer or Operator at their discretion."
-
   - name: Assets
     label: Assets
     description: "The Assets settled by the transfer action."
