Overhaul markdown output

--- a/src/protocol/develop/types/Administrator.yaml
+++ b/src/protocol/develop/types/Administrator.yaml
@@ -1,5 +1,6 @@
 metadata:
   name: Administrator
+  label: Administrator
   description: "Administrator is used to refer to a Administration role in an Entity."
 
 fields:
