--- a/src/protocol/develop/types/Manager.yaml
+++ b/src/protocol/develop/types/Manager.yaml
@@ -1,5 +1,6 @@
 metadata:
   name: Manager
+  label: Manager
   description: "Manager is used to refer to a role that is responsible for the Management of an Entity."
 
 fields:
