--- a/src/protocol/develop/types/VotingSystem.yaml
+++ b/src/protocol/develop/types/VotingSystem.yaml
@@ -1,5 +1,6 @@
 metadata:
   name: VotingSystem
+  label: Voting System
   description: "A VotingSystem defines all details of a Voting System."
 
 fields:
