--- a/src/protocol/develop/types/Entity.yaml
+++ b/src/protocol/develop/types/Entity.yaml
@@ -1,5 +1,6 @@
 metadata:
   name: Entity
+  label: Entity
   description: "Entity represents the details of a legal Entity, such as a public or private company, government agency, or and individual."
 
 fields:
