Add timeout reject code.

--- a/src/resources/develop/Rejections.yaml
+++ b/src/resources/develop/Rejections.yaml
@@ -22,6 +22,12 @@ values:
       text: Transaction Malformed
       description: The Bitcoin tx is malformed. Incorrect inputs/outputs or something similar.
 
+    3:
+      name: Timeout
+      text: Time Out
+      description: A dependency, other contract/service, has failed to complete before the smart contract's timeout.
+
+
     #################################### Contract ####################################
 
     10:
