Add reject for vote system not permitted.

--- a/src/resources/develop/Rejections.yaml
+++ b/src/resources/develop/Rejections.yaml
@@ -151,6 +151,11 @@ values:
       text: Ballot Already Counted
       description: The ballot has already been counted for this address.
 
+    45:
+      name: VoteSystemNotPermitted
+      text: Vote System Not Permitted
+      description: "The voting system isn't permitted for this request."
+
     #################################### Enforcement ####################################
 
     #50:
