--- a/src/protocol/develop/actions/A1 - Asset Definition.yaml
+++ b/src/protocol/develop/actions/A1 - Asset Definition.yaml
@@ -12,7 +12,7 @@ metadata:
   rejection: Rejection
 
 rules:
-  fee: 2000
+  fee:
   inputs:
     - name: Issuer
       label: "Issuer's Public Address"
