--- a/src/assets/develop/CUR - Currency.yaml
+++ b/src/assets/develop/CUR - Currency.yaml
@@ -19,6 +19,7 @@ fields:
     type: uint
     size: 1
     example: 0
+    description: Payload Version
     computed: true
 
   - name: ISOCode
@@ -26,6 +27,7 @@ fields:
     type: fixedchar
     size: 3
     example: AUD
+    description: eg. AUD, CAD, USD, GBP, etc.
     span: full
     displayOrder: 3
 
@@ -35,6 +37,7 @@ fields:
     # varchar size is number of bits to serialize the size of the value
     size: 8
     example: Reserve Bank of Australia
+    description: eg. Reserve Bank of Australia, etc.
     span: full
     displayOrder: 3
 
@@ -44,5 +47,6 @@ fields:
     # varchar size is number of bits to serialize the size of the value
     size: 16
     example: Australian dollar
+    description: eg. Australian dollar
     span: full
     displayOrder: 3
