Proof Contract and Asset actions Fill in blank descriptions Include examples in field descriptions Remove lengthy example values - including hex, these were useful in early unit tests but are no longer required for anything example_value -> example

--- a/src/assets/develop/COU - Coupon.yaml
+++ b/src/assets/develop/COU - Coupon.yaml
@@ -18,6 +18,7 @@ metadata:
 fields:
   - name: Version
     label: Payload Version
+    description: The version number that this asset payload adheres to.
     type: uint
     size: 1
     example: 0
@@ -25,6 +26,7 @@ fields:
 
   - name: RedeemingEntity
     label: Redeeming Entity
+    description: The entity responsible for redemption of this coupon.
     type: varchar
     # varchar size is number of bits to serialize the size of the value
     size: 8
