--- a/src/assets/develop/MEM - Membership.yaml
+++ b/src/assets/develop/MEM - Membership.yaml
@@ -20,9 +20,9 @@ metadata:
 
 fields:
   - name: Version
-    label: Version
+    label: Payload Version
+    description: The version number that this asset payload adheres to.
     type: uint
-    description: Payload Version
     size: 1
     example: 0
     computed: true
@@ -30,6 +30,7 @@ fields:
   - name: AgeRestriction
     label: Age Restriction
     type: AgeRestriction
+    description: "Age restriction is used to specify required ages for asset ownership."
 
   - name: ValidFrom
     label: Valid From
