--- a/src/assets/develop/SHC - Common Share.yaml
+++ b/src/assets/develop/SHC - Common Share.yaml
@@ -17,9 +17,9 @@ metadata:
 
 fields:
   - name: Version
-    label: Version
+    label: Payload Version
+    description: The version number that this asset payload adheres to.
     type: uint
-    description: Payload Version
     size: 1
     example: 0
     computed: true
