--- a/src/messages/develop/0002 - Public Message.yaml
+++ b/src/messages/develop/0002 - Public Message.yaml
@@ -23,7 +23,7 @@ fields:
     description: "Timestamp in nanoseconds for when the message sender creates the transaction."
     type: Timestamp
     example_hex: 1588f8cc6a16430d
-    example_value: 1551767413250187179
+    example: 1551767413250187179
     notes: ""
 
   - name: PublicMessage
@@ -31,5 +31,5 @@ fields:
     description: "Tokenized Ltd. announces product launch."
     type: varchar
     size: 32
-    example_value: ""
+    example: ""
     notes: ""
