--- a/src/protocol/develop/types/Entity.yaml
+++ b/src/protocol/develop/types/Entity.yaml
@@ -11,7 +11,7 @@ fields:
     # varchar size is number of bits to serialize the size of the value
     size: 8
     example_hex: 0a5465736c6120496e632e
-    example_value: "Tesla Inc."
+    example: "Tesla Inc."
     notes: ""
 
   - name: Type
@@ -20,7 +20,7 @@ fields:
     type: fixedchar
     size: 1
     example_hex: 50
-    example_value: "P"
+    example: "P"
     notes: ""
 
   - name: LEI
@@ -29,7 +29,7 @@ fields:
     type: fixedchar
     size: 20
     example_hex: 3534393330303834554b4c564d59323244533136
-    example_value: "54930084UKLVMY22DS16"
+    example: "54930084UKLVMY22DS16"
     notes: "ISO 17442 - https://en.wikipedia.org/wiki/Legal_Entity_Identifier"
 
   - name: AddressIncluded
@@ -37,7 +37,7 @@ fields:
     description: "Registered/Physical/mailing address(HQ). Y-1/N-0, N means there is no issuer address."
     type: bool
     example_hex: 01
-    example_value: "1"
+    example: "1"
     notes: "Entity/Contracting Party X Details"
 
   - name: UnitNumber
@@ -47,7 +47,7 @@ fields:
     # varchar size is number of bits to serialize the size of the value
     size: 8
     example_hex: 0132
-    example_value: "2"
+    example: "2"
     notes: ""
     # include_if_true specifies that this field is only included in serialization if the specified field is true.
     include_if_true: AddressIncluded
@@ -59,7 +59,7 @@ fields:
     # varchar size is number of bits to serialize the size of the value
     size: 8
     example_hex: 053133353737
-    example_value: "13577"
+    example: "13577"
     notes: ""
     # include_if_true specifies that this field is only included in serialization if the specified field is true.
     include_if_true: AddressIncluded
@@ -71,7 +71,7 @@ fields:
     # varchar size is number of bits to serialize the size of the value
     size: 16
     example_hex: 000c466169726d6f6e7420417665
-    example_value: "Fairmont Ave"
+    example: "Fairmont Ave"
     notes: ""
     # include_if_true specifies that this field is only included in serialization if the specified field is true.
     include_if_true: AddressIncluded
@@ -83,7 +83,7 @@ fields:
     # varchar size is number of bits to serialize the size of the value
     size: 8
     example_hex: 07526f62696e6f68
-    example_value: "Robinoh"
+    example: "Robinoh"
     notes: ""
     # include_if_true specifies that this field is only included in serialization if the specified field is true.
     include_if_true: AddressIncluded
@@ -94,7 +94,7 @@ fields:
     type: fixedchar
     size: 5
     example_hex: 4243000000
-    example_value: "BC"
+    example: "BC"
     notes: ""
     # include_if_true specifies that this field is only included in serialization if the specified field is true.
     include_if_true: AddressIncluded
@@ -105,7 +105,7 @@ fields:
     type: fixedchar
     size: 3
     example_hex: 555341
-    example_value: "USA"
+    example: "USA"
     notes: ""
     # include_if_true specifies that this field is only included in serialization if the specified field is true.
     include_if_true: AddressIncluded
@@ -116,7 +116,7 @@ fields:
     type: fixedchar
     size: 12
     example_hex: 353032313000000000000000
-    example_value: "50210"
+    example: "50210"
     notes: ""
     # include_if_true specifies that this field is only included in serialization if the specified field is true.
     include_if_true: AddressIncluded
@@ -128,7 +128,7 @@ fields:
     # varchar size is number of bits to serialize the size of the value
     size: 8
     example_hex: 136a616d657340746f6b656e697a65642e636f6d
-    example_value: "satoshi@tokenized.com"
+    example: "satoshi@tokenized.com"
     notes: ""
 
   - name: PhoneNumber
@@ -138,7 +138,7 @@ fields:
     # varchar size is number of bits to serialize the size of the value
     size: 8
     example_hex: 0a30343438343834383438
-    example_value: "0448484848"
+    example: "0448484848"
     notes: ""
 
   - name: Administration
