--- a/src/protocol/develop/actions/R1 - Establishment.yaml
+++ b/src/protocol/develop/actions/R1 - Establishment.yaml
@@ -13,21 +13,21 @@ rules:
   fee:
   inputs:
     - name: Register
-      label: "Register's Public Address"
-      comments:
+      label: "Register Public Address"
+      comments: "The address of the associated register."
 
   outputs:
     - name: Register
-      label: "Register's Public Address"
-      comments: Sends Bitcoin back to itself less mining fees.
+      label: "Register Public Address"
+      comments: "Required so that users can monitor transactions to the register for notifications of this action."
 
 fields:
   - name: Message
     label: Message
-    description:
+    description: "A custom message to include with this action."
     type: varchar
     # varchar size is number of bits to serialize the size of the value
     size: 32
     example_hex: 000000174e6f72746820416d65726963612057686974656c697374
-    example_value: "North America Whitelist"
+    example: "North America Whitelist"
     notes: ""
