--- a/src/protocol/develop/types/Administrator.yaml
+++ b/src/protocol/develop/types/Administrator.yaml
@@ -9,7 +9,7 @@ fields:
     description: "Chairman, Director, Managing Partner, etc.. Found in 'Roles' in Specification/Resources"
     type: Role
     example_hex: 37
-    example_value: "7"
+    example: "7"
     notes: "7 - Chair"
 
   - name: Name
@@ -19,7 +19,7 @@ fields:
     # varchar size is number of bits to serialize the size of the value
     size: 8
     example_hex: 0d4a616d65732042656c64696e67
-    example_value: "Satoshi Nakamoto"
+    example: "Satoshi Nakamoto"
     notes: ""
 
 # Constructor parameters
