--- a/src/protocol/develop/types/Manager.yaml
+++ b/src/protocol/develop/types/Manager.yaml
@@ -9,7 +9,7 @@ fields:
     description: "CEO, COO, CFO, etc. Found in 'Roles' in Specification/Resources"
     type: Role
     example_hex: 35
-    example_value: "5"
+    example: "5"
     notes: "5 - CEO"
 
   - name: Name
@@ -19,7 +19,7 @@ fields:
     # varchar size is number of bits to serialize the size of the value
     size: 8
     example_hex: 0d4a616d65732042656c64696e67
-    example_value: "Satoshi Nakamoto"
+    example: "Satoshi Nakamoto"
     notes: ""
 
 # Constructor parameters
