--- a/src/protocol/develop/types/QuantityIndex.yaml
+++ b/src/protocol/develop/types/QuantityIndex.yaml
@@ -10,7 +10,7 @@ fields:
     type: uint
     size: 2
     example_hex: 0000
-    example_value: 0
+    example: 0
     notes: ""
 
   - name: Quantity
@@ -19,5 +19,5 @@ fields:
     type: uint
     size: 8
     example_hex: 0000000000000064
-    example_value: 100
+    example: 100
     notes: ""
