--- a/src/assets/develop/COU - Coupon.yaml
+++ b/src/assets/develop/COU - Coupon.yaml
@@ -9,7 +9,7 @@ metadata:
   label: Coupon
   kind: Utility
   category: Coupons
-  description: A voucher entitling the holder to a discount off a particular product or service.
+  description: A voucher entitling the holder to a discount on a particular product or service.
   examples:
     - Sale Price Discount
     - Kickstarter Campaign
